--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,32 @@
     background-color: #f9f9f9;
 }
 
+
 .bg-purple {
     background-color: #504c74;
+}
+
+.fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+input::placeholder {
+    font-size: 1rem;
+}
+
+@media (max-width: 640px) {
+    input::placeholder {
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 320px) {
+    input::placeholder {
+        font-size: 0.8rem;
+    }
 }
